style(a-to-z-index): fix drop cap width inconsistency, letter spacing on mobile

--- a/src/a-to-z/style.scss
+++ b/src/a-to-z/style.scss
@@ -206,6 +206,7 @@ button.a-to-z-index-alphabet-letter-button {
 @media screen and (min-width: 600px) {
 	.a-to-z-index-section-drop-cap {
 		width: 200px;
+		flex-shrink: 0;
 		text-align: right;
 	}	
 }
@@ -213,7 +214,6 @@ button.a-to-z-index-alphabet-letter-button {
 .a-to-z-index-section-drop-cap-letter {
 	position: relative;
 	display: inline-block;
-	margin: -18px 0 0;
 	font-family: 'MontserratBlackStatic';
 	font-size: 140px;
 	line-height: 1;
@@ -221,6 +221,12 @@ button.a-to-z-index-alphabet-letter-button {
 	text-transform: uppercase;
 	-webkit-text-stroke: 2px var(--wp--preset--color--smokey);
 	text-shadow: 4px 0px var(--wp--preset--color--orange);
+}
+
+@media screen and (min-width: 600px) {
+	.a-to-z-index-section-drop-cap-letter {
+		margin: -18px 0 0;
+	}
 }
 
 .a-to-z-index-section-content {
